--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "/",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
