--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "superagent": "^5.3.1"
   },
   "browserslist": {
     "production": [
